Bug 1209417 - The QR code dialog should hint at zooming the dialog in case it's too small r=jryans
UltraBlame original commit: 3ea568ea22f658a2dff132a8724171e2850f0703

--- a/devtools/client/webide/themes/wifi-auth.css
+++ b/devtools/client/webide/themes/wifi-auth.css
@@ -241,3 +241,16 @@ self
 center
 ;
 }
+#
+qr
+-
+size
+-
+note
+{
+text
+-
+align
+:
+center
+}
